[gd_scene load_steps=9 format=2]

[ext_resource path="res://World/World.gd" type="Script" id=1]
[ext_resource path="res://Bg/Bg.tscn" type="PackedScene" id=2]
[ext_resource path="res://Misc/Spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Misc/UI_Bar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu/Transition.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/231257__foolboymedia__80s-vibe.wav" type="AudioStream" id=7]
[ext_resource path="res://Misc/PickupSound.tscn" type="PackedScene" id=8]

[node name="World" type="Node2D"]
script = ExtResource( 1 )
round_timer = 8

[node name="Bg" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( -2, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65524, 2, 0, -65523, 2, 0, -65522, 2, 0, -65521, 2, 0, -65520, 2, 0, -65519, 2, 0, -65518, 2, 0, -65517, 2, 0, -65516, 2, 0, 65534, 2, 0, 0, 0, 131073, 1, 0, 131073, 2, 0, 4, 3, 0, 131073, 4, 0, 131073, 5, 0, 131073, 6, 0, 131073, 7, 0, 131073, 8, 0, 131073, 9, 0, 131073, 10, 0, 131073, 11, 0, 131073, 12, 0, 131073, 13, 0, 131073, 14, 0, 131073, 15, 0, 131073, 16, 0, 131073, 17, 0, 131073, 18, 0, 131073, 19, 0, 5, 20, 2, 0, 131070, 2, 0, 65536, 0, 131073, 65537, 0, 131073, 65538, 0, 4, 65539, 0, 131073, 65540, 0, 131073, 65541, 0, 131073, 65542, 0, 131073, 65543, 0, 131073, 65544, 0, 131073, 65545, 0, 131073, 65546, 0, 131073, 65547, 0, 131073, 65548, 0, 4, 65549, 0, 131073, 65550, 0, 131073, 65551, 0, 131073, 65552, 0, 131073, 65553, 0, 131073, 65554, 0, 131073, 65555, 0, 131073, 65556, 2, 0, 196606, 2, 0, 131072, 0, 131073, 131073, 0, 131073, 131074, 0, 131073, 131075, 0, 131073, 131076, 0, 131073, 131077, 0, 131073, 131078, 0, 131073, 131079, 0, 131073, 131080, 0, 131073, 131081, 0, 131073, 131082, 0, 131073, 131083, 0, 5, 131084, 0, 131073, 131085, 0, 131073, 131086, 0, 131073, 131087, 0, 5, 131088, 0, 131073, 131089, 0, 131073, 131090, 0, 131073, 131091, 0, 131073, 131092, 2, 0, 262142, 2, 0, 196608, 0, 131073, 196609, 0, 131073, 196610, 0, 131073, 196611, 0, 131073, 196612, 0, 131073, 196613, 0, 131073, 196614, 0, 131073, 196615, 0, 131073, 196616, 0, 131073, 196617, 0, 131073, 196618, 0, 131073, 196619, 0, 131073, 196620, 0, 131073, 196621, 0, 131073, 196622, 0, 131073, 196623, 0, 131073, 196624, 0, 131073, 196625, 0, 2, 196626, 0, 131073, 196627, 0, 131073, 196628, 2, 0, 327678, 2, 0, 262144, 0, 131073, 262145, 0, 131073, 262146, 0, 131073, 262147, 0, 131073, 262148, 0, 131073, 262149, 0, 4, 262150, 0, 131073, 262151, 0, 131073, 262152, 0, 2, 262153, 0, 131073, 262154, 0, 131073, 262155, 0, 131073, 262156, 0, 131073, 262157, 0, 7, 262158, 0, 131073, 262159, 0, 131073, 262160, 0, 131073, 262161, 0, 131073, 262162, 0, 131073, 262163, 0, 131073, 262164, 2, 0, 393214, 2, 0, 327680, 0, 131073, 327681, 0, 5, 327682, 0, 131073, 327683, 0, 131073, 327684, 0, 131073, 327685, 0, 131073, 327686, 0, 131073, 327687, 0, 131073, 327688, 0, 131073, 327689, 0, 131073, 327690, 0, 131073, 327691, 0, 131073, 327692, 0, 131073, 327693, 0, 131073, 327694, 0, 131073, 327695, 0, 131073, 327696, 0, 131073, 327697, 0, 131073, 327698, 0, 4, 327699, 0, 131073, 327700, 2, 0, 458750, 2, 0, 393216, 0, 131073, 393217, 0, 131073, 393218, 0, 131073, 393219, 0, 131073, 393220, 0, 131073, 393221, 0, 131073, 393222, 0, 131073, 393223, 0, 131073, 393224, 0, 131073, 393225, 0, 131073, 393226, 0, 131073, 393227, 0, 131073, 393228, 0, 131073, 393229, 0, 131073, 393230, 0, 131073, 393231, 0, 131073, 393232, 0, 131073, 393233, 0, 131073, 393234, 0, 131073, 393235, 0, 131073, 393236, 2, 0, 524286, 2, 0, 458752, 0, 3, 458753, 0, 131073, 458754, 0, 131073, 458755, 0, 131073, 458756, 0, 131073, 458757, 0, 5, 458758, 0, 131073, 458759, 0, 131073, 458760, 0, 131073, 458761, 0, 131073, 458762, 0, 4, 458763, 0, 131073, 458764, 0, 131073, 458765, 0, 131073, 458766, 0, 131073, 458767, 0, 131073, 458768, 0, 131073, 458769, 0, 131073, 458770, 0, 131073, 458771, 0, 131073, 458772, 2, 0, 589822, 2, 0, 524288, 0, 131073, 524289, 0, 131073, 524290, 0, 4, 524291, 0, 131073, 524292, 0, 131073, 524293, 0, 131073, 524294, 0, 131073, 524295, 0, 131073, 524296, 0, 131073, 524297, 0, 131073, 524298, 0, 131073, 524299, 0, 131073, 524300, 0, 131073, 524301, 0, 131073, 524302, 0, 131073, 524303, 0, 4, 524304, 0, 131073, 524305, 0, 131073, 524306, 0, 131073, 524307, 0, 131073, 524308, 2, 0, 655358, 2, 0, 589824, 0, 131073, 589825, 0, 131073, 589826, 0, 131073, 589827, 0, 131073, 589828, 0, 131073, 589829, 0, 131073, 589830, 0, 131073, 589831, 0, 131073, 589832, 0, 3, 589833, 0, 131073, 589834, 0, 131073, 589835, 0, 131073, 589836, 0, 131073, 589837, 0, 131073, 589838, 0, 131073, 589839, 0, 131073, 589840, 0, 131073, 589841, 0, 131073, 589842, 0, 2, 589843, 0, 131073, 589844, 2, 0, 720894, 2, 0, 655360, 0, 131073, 655361, 0, 131073, 655362, 0, 131073, 655363, 0, 131073, 655364, 0, 131073, 655365, 0, 131073, 655366, 0, 131073, 655367, 0, 131073, 655368, 0, 131073, 655369, 0, 131073, 655370, 0, 131073, 655371, 0, 131073, 655372, 0, 131073, 655373, 0, 131073, 655374, 0, 131073, 655375, 0, 131073, 655376, 0, 131073, 655377, 0, 131073, 655378, 0, 131073, 655379, 0, 131073, 655380, 2, 0, 786430, 2, 0, 720896, 0, 131073, 720897, 0, 131073, 720898, 0, 131073, 720899, 0, 131073, 720900, 0, 5, 720901, 0, 131073, 720902, 0, 131073, 720903, 0, 131073, 720904, 0, 131073, 720905, 0, 131073, 720906, 0, 131073, 720907, 0, 131073, 720908, 0, 131073, 720909, 0, 131073, 720910, 0, 131073, 720911, 0, 131073, 720912, 0, 131073, 720913, 0, 131073, 720914, 0, 131073, 720915, 0, 131073, 720916, 2, 0, 851966, 2, 0, 851967, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786451, 2, 0, 786452, 2, 0 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Spawners" type="Node2D" parent="."]

[node name="Spawner" parent="Spawners" instance=ExtResource( 3 )]
position = Vector2( 287.391, 24.2287 )
z_as_relative = false

[node name="Spawner2" parent="Spawners" instance=ExtResource( 3 )]
position = Vector2( 115.044, 168.506 )

[node name="Spawner4" parent="Spawners" instance=ExtResource( 3 )]
position = Vector2( 18.4257, 110.27 )

[node name="Spawner3" parent="Spawners" instance=ExtResource( 3 )]
position = Vector2( 292.233, 155.827 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 19.1716, 16.336 )
z_index = 2
z_as_relative = false

[node name="UI_Bar" parent="." instance=ExtResource( 5 )]
position = Vector2( 9.309, 10.4135 )
z_index = 2000

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BreakTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 8.0
one_shot = true

[node name="Transition" parent="." instance=ExtResource( 6 )]
z_index = 3000
z_as_relative = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="Pickup" parent="." instance=ExtResource( 8 )]
